# popcorn2d

./: CMakeLists.txt  README.md  batch_cpu_multicore.sh  batch_cpu_multicore_atomic.sh  batch_cpu_single.sh  batch_cpu_single_old.sh  batch_cpu_single_update.sh  batch_cpu_single_update_wo_srun.sh  batch_gpu.sh  batch_gpu_w_atomic.sh
results/: 512x512_it64_r20_cuda_k80.csv  512x512_it64_r20_pgi_haswell_1core.csv  512x512_it64_r20_pgi_haswell_1core2.csv  512x512_it64_r20_pgi_haswell_1core3.csv  512x512_it64_r20_pgi_haswell_1core_update.csv  512x512_it64_r20_pgi_haswell_1core_update_wo.csv  512x512_it64_r20_pgi_haswell_24core_atomic.csv  512x512_it64_r20_pgi_k80.csv  512x512_it64_r20_pgi_k80_atomic.csv  tests.md
scripts/: compare.r
src/: CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  cuda_globals.hpp  popcorn2d.cpp  popcorn2d.cu  ppm.hpp
